--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<header>
+		
+	</header>
 	<div class="container">
 		<div class="calculator dark">
 				<div class="theme-toggler active">
